src/css/main.css
@import url(variables.css);
@import url(reset.css);

.col-1 {width: 8.33%;}
.col-6 {width: 50%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-12 {width: 100%;}

.layer1{z-index: 1;}
.layer2{z-index: 2;}

.debug1{border: 1px solid red;}
.debug2{border: 1px solid blue;}
.debug3{border: 1px solid green;}
.debug4{border: 1px solid aqua;}

:root{
    font-family: var(--family);
}

/* -- Generics -- */

.h-fluid{
    height: 100%;
}

.grid{
    display: grid;
}

.flex{
    display: flex;
}

.column{
    flex-direction: column;
}

.row{
    flex-direction: row;
}

.transparent{
    background: transparent;
}

.blurred{
    filter: blur(2px);
}

/* -- Elements -- */

#root{
    border: 1px solid green;
}

#viewport{
    height: 100vh;
    width: 100vw;
}

body{
    background: var(--bgnd);
    color: var(--text);
}

main{
    padding: 20vh 0;
    height: calc(100% - 80px);
}

a{
    text-decoration: none;
}

/* -- Navbar -- */

nav{
    position: fixed;
    height: 80px;
    align-items: center;
}

.logo{
    padding: 0 25px;
    margin-right: 75px;
}

.links{
    align-items: center
}

.nav-link{
    padding: 0 15px;
    color: inherit;
}
.nav-link:hover{
    text-decoration: underline;
}

